[IMP] document_page_access_group_user_role: Users compatibility
TT48786

--- a/document_page_access_group_user_role/static/description/index.html
+++ b/document_page_access_group_user_role/static/description/index.html
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
@@ -391,7 +390,7 @@ ul.auto-toc {
 <li>Go to <cite>Knowledge / Pages</cite> and create or edit one.</li>
 <li>Set in the “Roles” tab the one we have just created.</li>
 <li>Go back to the role, edit it and add any group(s).</li>
-<li>The role groups will have been added in the “Security” tab.</li>
+<li>The role users will have been added in the “Security” tab.</li>
 </ol>
 </div>
 <div class="section" id="bug-tracker">
